--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div>
-        <h1 class="text"></h1>
+        <h1 class="text1"></h1>
+        <h1 class="text2"></h1>
+        <h1 class="text3"></h1>
+        <h1 class="text4"></h1>
     </div>
     <script src="app.js"></script>
 </body>
