--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Calcul Salaire</h1>
+    <span>Nom</span>
+    <input id="name" type="text">
+    <br><br>
+    <span>Salaire</span>
+    <input id="salaire" type="text">
+    <br><br>
+    <span>Sexe</span>
+    <input id="sexe" type="text">
+    <br><br>
+    <span>Charge</span>
+    <input id="charge" type="text">
+    <br><br>
+    <input type="button" value="Valider" onclick=getValue()>
+
+
     <div>
         <h1 class="text1"></h1>
         <h1 class="text2"></h1>
