--- a/index.html
+++ b/index.html
@@ -30,19 +30,25 @@
     <input type="button" value="Valider" onclick=getValue()>
 -->
 
+<!--
 <input type="text" id="course"><input type="button" value="OK" onclick="ajout()">
 <input type="button" value="Reset" onclick="reset()">
 <ul id="listecommissions">
 	<li>1kg de farine</li>
 	<li>un pack de lait</li>
 </ul>
+ -->
 
+ <p>Essai de <span id="zone">texte</span></p>
+
+<input type="button" value="Supprimer une règle" onclick="supprime()">
+<input type="button" value="Ajouter une règle" onclick="ajoute()">
     <div>
         <h1 class="text1"></h1>
         <h1 class="text2"></h1>
         <h1 class="text3"></h1>
         <h1 class="text4"></h1>
     </div>
-    <script src="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
